@@ -4,6 +4,7 @@ Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
 Fixed bug 1084: NPE at UselessStringValueOfRule.java:36
 Fixed bug 1092: Wrong Attribute "excludemarker" in Ant Task Documentation
 Fixed bug 1104: IdempotentOperation false positive
+Fixed bug 1107: PMD 5.0.4 couldn't parse call of parent outer java class method from inner class
 Fixed bug 1111: False positive: Useless parentheses
 Fixed bug 1114: CPD - Tokenizer not initialized with requested properties
 Fixed bug 1118: ClassCastException in pmd.lang.ecmascript.ast.ASTElementGet
